# ChangeLog for media-libs/libsndfile
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libsndfile/ChangeLog,v 1.60 2006/12/16 08:57:26 aballier Exp $

  16 Dec 2006; Alexis Ballier <aballier@gentoo.org>
  +files/libsndfile-1.0.17-ogg.patch, libsndfile-1.0.17.ebuild:
  Removing forced linking to ogg since that's not needed, bug #158212

  17 Nov 2006; Alexis Ballier <aballier@gentoo.org>
  libsndfile-1.0.17.ebuild:
  Add patch from Josh Coalson to be able to build with flac 1.1.3

  19 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  libsndfile-1.0.17.ebuild:
  Depend on 1.1.2 version of flac, as the 1.1.3 version changes API.

  02 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  libsndfile-1.0.17.ebuild:
  Don't use parallel make for install, as it fails. Also don't use sed and
  change htmldocdir path on the make command line.

  31 Aug 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/libsndfile-1.0.12-flac.patch,
  -files/libsndfile-1.0.15-ac-arg-fixes.patch, -libsndfile-1.0.5.ebuild,
  -libsndfile-1.0.9.ebuild, -libsndfile-1.0.10.ebuild,
  -libsndfile-1.0.12-r1.ebuild, -libsndfile-1.0.15-r2.ebuild,
  -libsndfile-1.0.16.ebuild:
  Drop old versions.

*libsndfile-1.0.17 (31 Aug 2006)

  31 Aug 2006; Diego Pettenò <flameeyes@gentoo.org>
  +libsndfile-1.0.17.ebuild:
  Version bump.

  25 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  libsndfile-1.0.16.ebuild:
  Add ~x86-fbsd keyword.

  24 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  libsndfile-1.0.16.ebuild:
  Add elibtoolize call.

  30 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  libsndfile-1.0.11.ebuild, libsndfile-1.0.16.ebuild:
  Add missing elibtoolize, drop autotools eclass and its deps.

*libsndfile-1.0.16 (30 Apr 2006)

  30 Apr 2006; Tony Vroon <chainsaw@gentoo.org> +libsndfile-1.0.16.ebuild:
  Version bump. Patch from Flameeyes has been merged upstream.

*libsndfile-1.0.15-r2 (25 Mar 2006)
