@@ -8,18 +8,18 @@ SHA256 1237b34a26b2b29998235495762aadd316761ee4cdeb148c74872b9669b4c866 files/li
 DIST libsndfile-1.0.11.tar.gz 816107 RMD160 3829d1fa9f5caf16f4b589d03877d229cb8f5603 SHA1 16372a7814530178a2642bd22f203641e0392ebb SHA256 fd107e7923dd09f48a2ede31ba11e9965478d9c3e094d19cb81124a971ff9ecf
 DIST libsndfile-1.0.17+flac-1.1.3.patch.bz2 3127 RMD160 fc6e6f03069c1ad8ee43f600f6ac2aa6e97bb1f5 SHA1 10e0d19dfc8cf2a6bf499e0fa0d1ab17dca4c519 SHA256 2c8b6df283309061e8e9aaedd0bc20c7ebf75fa8ad4ed8b01f7bf04162206df1
 DIST libsndfile-1.0.17.tar.gz 819456 RMD160 ae93822a4c587dcdd7c70d043d2a38ed2fe3a188 SHA1 2f66798d596a15491fbd1191ded8125ed71ef411 SHA256 1792e4e60386b450ef8ec07c756e8f3ecfe96ebda7d0b09148da5f436d065ef2
-EBUILD libsndfile-1.0.11.ebuild 1065 RMD160 1772e653e45671ec1748255fd00c9c7b701196b3 SHA1 f2db4243e61fa362ef391a88b8f698da2eb7c96f SHA256 92b08714819b8783ce1b92600fc3983a186ac88b04c9c27532c077c26b40707e
-MD5 1ba2b26087ac68ababe4e25d94a5850c libsndfile-1.0.11.ebuild 1065
-RMD160 1772e653e45671ec1748255fd00c9c7b701196b3 libsndfile-1.0.11.ebuild 1065
-SHA256 92b08714819b8783ce1b92600fc3983a186ac88b04c9c27532c077c26b40707e libsndfile-1.0.11.ebuild 1065
+EBUILD libsndfile-1.0.11.ebuild 1073 RMD160 0606d9377e310dec216ee3f29197ebfa1aee1afd SHA1 fe920bafbb83caaf42565ac519d7237570d528f0 SHA256 5dfa2d79053e677311b60844d734260e6b93167191f806e61523b6ff93ce8e71
+MD5 93e85c47c874968c077164610a9bbe67 libsndfile-1.0.11.ebuild 1073
+RMD160 0606d9377e310dec216ee3f29197ebfa1aee1afd libsndfile-1.0.11.ebuild 1073
+SHA256 5dfa2d79053e677311b60844d734260e6b93167191f806e61523b6ff93ce8e71 libsndfile-1.0.11.ebuild 1073
 EBUILD libsndfile-1.0.17.ebuild 1351 RMD160 7534b181ef403fb945669c185d3d96155d18412d SHA1 3fa161a942e20e91a53494263fd0fd8f016a7b16 SHA256 4d9f5020554657981e68372c29418751ed1e96a35e293ca524120f484fd85c44
 MD5 5498ef741ecb1226b95ef5b682fc25dd libsndfile-1.0.17.ebuild 1351
 RMD160 7534b181ef403fb945669c185d3d96155d18412d libsndfile-1.0.17.ebuild 1351
 SHA256 4d9f5020554657981e68372c29418751ed1e96a35e293ca524120f484fd85c44 libsndfile-1.0.17.ebuild 1351
-MISC ChangeLog 8988 RMD160 f3632b81389d0f9274afbdda76b95c5f64d40ab6 SHA1 1e5638424bf08fb3d5f259805c04c4187d8441aa SHA256 2909daa54fb955379562ade52b2dfe324b42e434a1e3740f86a653822a6ee509
-MD5 51de0a0b75f08bd0c79b6372c1864f85 ChangeLog 8988
-RMD160 f3632b81389d0f9274afbdda76b95c5f64d40ab6 ChangeLog 8988
-SHA256 2909daa54fb955379562ade52b2dfe324b42e434a1e3740f86a653822a6ee509 ChangeLog 8988
+MISC ChangeLog 9102 RMD160 5370f46e886be8aedd22f9276cc9ae999a9c8c98 SHA1 5b15a73be2183c2a2d7a425973884ced2abf96e2 SHA256 177f2f302204c6982f3a176b282de0b03d44315f3f70f6940a967a4a4b50cc02
+MD5 be86960bbbba29c35e4211cc31381a29 ChangeLog 9102
+RMD160 5370f46e886be8aedd22f9276cc9ae999a9c8c98 ChangeLog 9102
+SHA256 177f2f302204c6982f3a176b282de0b03d44315f3f70f6940a967a4a4b50cc02 ChangeLog 9102
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e metadata.xml 158
@@ -31,9 +31,9 @@ MD5 67beb9269bb978b47656f0631b663c41 files/digest-libsndfile-1.0.17 542
 RMD160 93bd725af5a0483ba690f30147515b13cb0e7151 files/digest-libsndfile-1.0.17 542
 SHA256 597f7792ec7f2a23a7dff42dcef2df934fde455c3c602db799d22ac4fc220fbd files/digest-libsndfile-1.0.17 542
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.6 (GNU/Linux)
+Version: GnuPG v2.0.1 (GNU/Linux)
 
-iD8DBQFFg7T7vFcC4BYPU0oRAtGiAKCsNqfO+NTKLkmUAoKLdrYxU9g2BQCgnYZG
-YI9+K79OKQiGWtLFQw20p4A=
-=m/cN
+iD8DBQFFsqMnAiZjviIA2XgRAnxLAJ9ntC1O+980WKjkLT0Vzf144a86tQCgziZP
+yv18RfL5LyM4M6/CmxFUJGw=
+=l6h8
 -----END PGP SIGNATURE-----
