@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libsndfile
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libsndfile/ChangeLog,v 1.60 2006/12/16 08:57:26 aballier Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libsndfile/ChangeLog,v 1.61 2007/01/20 23:17:39 flameeyes Exp $
+
+  20 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
+  libsndfile-1.0.11.ebuild:
+  Add missing libtool inherit.
 
   16 Dec 2006; Alexis Ballier <aballier@gentoo.org>
   +files/libsndfile-1.0.17-ogg.patch, libsndfile-1.0.17.ebuild:
